// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base rendering tests renders correctly App with default Styled 1`] = `
<div
  className="div-2-0-1-9"
>
  <header
    className="header-2-0-1-10"
  >
    <h1
      className="h1-2-0-1-11"
    >
      Title
    </h1>
  </header>
  <section
    className="section-3-0-1-12"
    data-name="content"
  >
    <button
      className="button-3-0-1-13"
    >
      primitive test
    </button>
    <button
      className="button-4-0-1-14"
    >
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-4-0-1-15"
  >
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with default styled 1`] = `
<div
  className="div-1-0-1-1"
>
  <header
    className="header-1-0-1-2"
  >
    <h1
      className="h1-1-0-1-3"
    >
      Title
    </h1>
  </header>
  <section
    className="section-1-0-1-4"
    data-name="content"
  >
    <button
      className="button-1-0-1-5"
    >
      primitive test
    </button>
    <button
      className="button-2-0-1-6"
    >
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-2-0-1-7"
  >
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with injectStyled 1`] = `
<div
  className="root-0-1-16"
>
  <div
    className="div-3-0-1-18"
  >
    <header
      className="header-3-0-1-19"
    >
      <h1
        className="h1-3-0-1-20"
      >
        Title
      </h1>
    </header>
    <section
      className="section-5-0-1-21"
      data-name="content"
    >
      <button
        className="button-5-0-1-22"
      >
        primitive test
      </button>
      <button
        className="button-6-0-1-23"
      >
        dynamic primitive test
      </button>
    </section>
    <section
      className="section-6-0-1-24"
    >
      Another section
    </section>
  </div>
</div>
`;
